# mcmc-jags

./: AUTHORS  CMakeLists.txt  Doxyfile  FindMKL.cmake  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  configure  configure.ac
src/UFsparse/AMD/: Makefile.am
src/UFsparse/CHOLMOD/: Makefile.am
src/include/function/: ArrayFunction.h  ArrayLogDensity.h  DFunction.h  DPQFunction.h  FuncError.h  FuncTab.h  Function.h  FunctionPtr.h  InverseLinkFunc.h  LinkFunction.h  Makefile.am  Makefile.in  PFunction.h  QFunction.h  ScalarFunc.h  ScalarFunction.h  ScalarVectorFunction.h  VectorFunction.h  VectorLogDensity.h  testfun.h
src/include/graph/: AggNode.h  ArrayLogicalNode.h  ArrayStochasticNode.h  ConstantDataNode.h  ConstantNode.h  ConstantParameterNode.h  DeterministicNode.h  DevianceNode.h  Graph.h  GraphMarks.h  LinkNode.h  LogicalNode.h  Makefile.am  Makefile.in  MixTab.h  MixtureNode.h  Node.h  NodeError.h  NodeNameTab.h  NodeSet.h  ParentError.h  ScalarLogicalNode.h  ScalarStochasticNode.h  StochasticNode.h  VSLogicalNode.h  VectorLogicalNode.h  VectorStochasticNode.h
src/include/sampler/: DensityMethod.h  DensitySampler.h  GibbsFactory.h  GibbsSampler.h  GraphView.h  ImmutableParallelSampler.h  ImmutableSampleMethod.h  ImmutableSampler.h  Linear.h  Makefile.am  Makefile.in  Metropolis.h  MutableParallelSampler.h  MutableSampleMethod.h  MutableSampler.h  ParallelDensitySampler.h  ParallelSampler.h  RWMetropolis.h  SampleMethod.h  SampleMethodNoAdapt.h  Sampler.h  SamplerFactory.h  SingletonFactory.h  SingletonGraphView.h  Slicer.h  StepAdapter.h  TemperedMetropolis.h  Updater.h
src/jrmath/: CMakeLists.txt  Makefile.am  Makefile.in  README  bd0.c  bessel_i.c  bessel_j.c  bessel_k.c  bessel_y.c  callbacks.cc  choose.c  d1mach.c  df.c  dweibull2.c  fprec.c  fround.c  gamma_cody.c  gammalims.c  i1mach.c  mlutils.c  nmath.h  pf.c  pgamma.c  pnchisq.c  polygamma.c  pweibull2.c  qbeta.c  qbinom.c  qf.c  qgamma.c  qnchisq.c  qnorm.c  qweibull2.c  rbeta.c  rbinom.c  rcauchy.c  rchisq.c  rexp.c  rf.c  rgamma.c  (+13 more)
src/lib/: CMakeLists.txt  CMakeLists.txt~  Console.cc  Makefile.am  Makefile.in  Module.cc  dllversion.rc  testlib.cc  version.cc  version.cc.in
src/lib/compiler/: CMakeLists.txt  Compiler.cc  ConstantFactory.cc  Counter.cc  CounterTab.cc  LogicalFactory.cc  Makefile.am  Makefile.in  MixCompiler.cc  MixCompiler.h  MixtureFactory.cc  NodeFactory.cc  ObsFuncTab.cc  ParseTree.cc  StochasticFactory.cc  parser.cc  parser.h  parser.yy  parser_extra.h  scanner.cc  scanner.ll
src/lib/distribution/: ArrayDist.cc  Bounds.cc  Bounds.h  CMakeLists.txt  DistDiscrete.cc  DistError.cc  DistPtr.cc  DistReal.cc  DistScalar.cc  DistScalarRmath.cc  DistTab.cc  Distribution.cc  Makefile.am  Makefile.in  RScalarDist.cc  ScalarDist.cc  VectorDist.cc  c99_math.c  c99_math.h
src/lib/function/: ArrayFunction.cc  ArrayLogDensity.cc  CMakeLists.txt  DFunction.cc  DPQFunction.cc  FuncError.cc  FuncTab.cc  Function.cc  FunctionPtr.cc  InverseLinkFunc.cc  LinkFunction.cc  Makefile.am  Makefile.in  PFunction.cc  QFunction.cc  ScalarFunc.cc  ScalarFunction.cc  ScalarLogDensity.cc  ScalarVectorFunction.cc  VectorFunction.cc  VectorLogDensity.cc  testfun.cc
src/lib/graph/: AggNode.cc  ArrayLogicalNode.cc  ArrayStochasticNode.cc  CMakeLists.txt  ConstantDataNode.cc  ConstantNode.cc  ConstantParameterNode.cc  DeterministicNode.cc  DevianceNode.cc  Graph.cc  GraphMarks.cc  LinkNode.cc  LogicalNode.cc  Makefile.am  Makefile.in  MixTab.cc  MixtureNode.cc  Node.cc  NodeError.cc  NodeNameTab.cc  ParentError.cc  ScalarLogicalNode.cc  ScalarStochasticNode.cc  StochasticNode.cc  VSLogicalNode.cc  VectorLogicalNode.cc  VectorStochasticNode.cc
src/lib/model/: BUGSModel.cc  CMakeLists.txt  CODA.cc  CODA.h  Makefile.am  Makefile.in  Model.cc  Monitor.cc  MonitorControl.cc  MonitorFactory.cc  MonitorInfo.cc  NodeArray.cc  NodeArraySubset.cc  SymTab.cc  TraceMonitor.cc
src/lib/module/: CMakeLists.txt  Makefile.am  Module.cc  ModuleError.cc
src/lib/rng/: CMakeLists.txt  Makefile.am  Makefile.in  RNG.cc  RmathRNG.cc  TruncatedNormal.cc
src/lib/sampler/: CMakeLists.txt  DensityMethod.cc  DensitySampler.cc  GibbsFactory.cc  GibbsSampler.cc  GraphView.cc  ImmutableParallelSampler.cc  ImmutableSampleMethod.cc  ImmutableSampler.cc  Linear.cc  Makefile.am  Makefile.in  Metropolis.cc  MutableParallelSampler.cc  MutableSampleMethod.cc  MutableSampler.cc  ParallelDensitySampler.cc  ParallelSampler.cc  RWMetropolis.cc  SRWMetropolis.cc  SampleMethod.cc  Sampler.cc  SamplerFactory.cc  SingletonFactory.cc  Slicer.cc  StepAdapter.cc  TemperedMetropolis.cc  Updater.cc
src/lib/sarray/: CMakeLists.txt  Index.cc  Makefile.am  Makefile.in  Range.cc  RangeImp.cc  RangeImp.h  RangeIterator.cc  SArray.cc  SimpleRange.cc  naconst.cc  nainf.c  nainf.cc  util.cc
src/lib/util/: CMakeLists.txt  Makefile.am  dim.cc  integer.cc  naconst.cc  nainf.c
src/modules/base/: CMakeLists.txt  Makefile.am  Makefile.in  base.cc  test.cc  testbase.cc  testbase.h
src/modules/basefunctions/: Add.cc  Add.h  And.cc  And.h  Divide.cc  Divide.h  Equal.cc  Equal.h  Equals.cc  Equals.h  GreaterOrEqual.cc  GreaterOrEqual.h  GreaterThan.cc  GreaterThan.h  Infix.cc  Infix.h  LessOrEqual.cc  LessOrEqual.h  LessThan.cc  LessThan.h  Makefile.am  Makefile.in  Multiply.cc  Multiply.h  Neg.cc  Neg.h  Not.cc  Not.h  NotEqual.cc  NotEqual.h  Or.cc  Or.h  Pow.cc  Pow.h  Subtract.cc  Subtract.h  module.cc
src/modules/basemonitors/: Makefile.am  Makefile.in  TraceMonitor.cc  TraceMonitor.h  TraceMonitorFactory.cc  TraceMonitorFactory.h  basemonitors.cc
src/modules/baserngs/: BaseRNGFactory.cc  Makefile.am  (+11 more)
src/terminal/: CMakeLists.txt  Makefile.am  Makefile.in  ReadData.cc  ReadData.h  jags.bat  jags.in  parser.cc  parser.h  parser.yy  scanner.cc  scanner.ll
test/: Makefile.am  base.cc  bugs.cc  glm.cc  modules.cc
win/: Makefile.am  README.WIN  jags.nsi  jags64.nsi
win/runtime/: Makefile.am  README.RUNTIME
win/runtime32/: Makefile.am  Makefile.in  README.RUNTIME32
win/runtime64/: Makefile.am  Makefile.in  README.RUNTIME64
(+771 files in other folders)
