cmake_minimum_required(VERSION 3.1)
project(jags)
set(JAGS_MAJOR 5)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})
find_package(MKL)
if(MKL_FOUND)
	set(BLAS_INCLUDE_DIR ${MKL_INCLUDE_DIR})
	set(BLAS_LIBRARIES ${MKL_LIBRARIES})
else()
	set(BLAS_INCLUDE_DIR "")
	set(BLAS_LIBRARIES blas lapack)
endif()

include_directories("." "src/include")
add_subdirectory(src)