add_subdirectory(compiler)
add_subdirectory(distribution)
add_subdirectory(function)
add_subdirectory(graph)
add_subdirectory(model)
add_subdirectory(module)
add_subdirectory(rng)
add_subdirectory(sampler)
add_subdirectory(sarray)
add_subdirectory(util)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/version.cc.in ${CMAKE_CURRENT_BINARY_DIR}/version.cc @ONLY)
add_library(jags SHARED $<TARGET_OBJECTS:compiler> $<TARGET_OBJECTS:distribution> $<TARGET_OBJECTS:function> $<TARGET_OBJECTS:graph> $<TARGET_OBJECTS:model> $<TARGET_OBJECTS:module> $<TARGET_OBJECTS:rng> $<TARGET_OBJECTS:sampler> $<TARGET_OBJECTS:sarray> $<TARGET_OBJECTS:util> Console.cc ${CMAKE_CURRENT_BINARY_DIR}/version.cc)
target_include_directories(jags PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(jags PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../include ${CMAKE_CURRENT_BINARY_DIR}/../include)
if(WIN32)
	target_compile_definitions(jags PRIVATE MAKE_DLL)
	set_target_properties(jags PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
else()
	target_compile_options(jags PRIVATE -fPIC)
endif()

export(TARGETS jags FILE "${CMAKE_BINARY_DIR}/jagsConfig.cmake")
install(TARGETS jags DESTINATION lib)