funcincludedir = $(pkgincludedir)/function

funcinclude_HEADERS = FuncTab.h Function.h ScalarFunction.h	\
VectorFunction.h ArrayFunction.h LinkFunction.h FunctionPtr.h	\
FuncError.h DPQFunction.h DFunction.h PFunction.h QFunction.h   \
ScalarLogDensity.h VectorLogDensity.h ArrayLogDensity.h \
ScalarVectorFunction.h

noinst_HEADERS = testfun.h
