graphincludedir = $(pkgincludedir)/graph

graphinclude_HEADERS = AggNode.h MixtureNode.h MixTab.h Node.h		\
ConstantNode.h LogicalNode.h StochasticNode.h Graph.h			\
DeterministicNode.h GraphMarks.h NodeError.h ScalarLogicalNode.h	\
VectorLogicalNode.h ArrayLogicalNode.h LinkNode.h VSLogicalNode.h	\
ScalarStochasticNode.h VectorStochasticNode.h ArrayStochasticNode.h
