samplerincludedir = $(pkgincludedir)/sampler

samplerinclude_HEADERS = Sampler.h SamplerFactory.h			\
SingletonFactory.h Slicer.h Metropolis.h RWMetropolis.h Linear.h	\
GraphView.h StepAdapter.h TemperedMetropolis.h SampleMethodNoAdapt.h	\
SingletonGraphView.h MutableSampleMethod.h ImmutableSampleMethod.h	\
MutableSampler.h ImmutableSampler.h
