find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)
BISON_TARGET(terminalParser parser.yy ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/parser.hh)
FLEX_TARGET(terminalScanner scanner.ll ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp)
ADD_FLEX_BISON_DEPENDENCY(terminalScanner terminalParser)
add_library(compiler OBJECT ${BISON_terminalParser_OUTPUTS} ${FLEX_terminalScanner_OUTPUTS} Compiler.cc LogicalFactory.cc ParseTree.cc Counter.cc CounterTab.cc MixtureFactory.cc MixCompiler.cc NodeFactory.cc ObsFuncTab.cc remap.h)
target_include_directories(compiler PRIVATE . ..)
if(WIN32)
	target_compile_definitions(compiler PRIVATE YY_NO_UNISTD_H)
else()
	target_compile_options(compiler PRIVATE -fPIC)
endif()
