noinst_LTLIBRARIES = libgraph.la

libgraph_la_CPPFLAGS = -I$(top_srcdir)/src/include

libgraph_la_SOURCES = Node.cc DeterministicNode.cc AggNode.cc		\
MixtureNode.cc LogicalNode.cc ConstantNode.cc StochasticNode.cc		\
Graph.cc GraphMarks.cc NodeError.cc ScalarLogicalNode.cc LinkNode.cc	\
VectorLogicalNode.cc ArrayLogicalNode.cc VSLogicalNode.cc \
ScalarStochasticNode.cc VectorStochasticNode.cc ArrayStochasticNode.cc
