noinst_LTLIBRARIES = libsampler.la

libsampler_la_CPPFLAGS = -I$(top_srcdir)/src/include

libsampler_la_SOURCES = Sampler.cc GraphView.cc Slicer.cc	\
Metropolis.cc RWMetropolis.cc ParallelSampler.cc SampleMethod.cc \
Linear.cc SamplerFactory.cc SingletonFactory.cc StepAdapter.cc \
TemperedMetropolis.cc
