add_subdirectory(functions)
add_subdirectory(monitors)
add_subdirectory(rngs)
add_subdirectory(samplers)
add_library(base SHARED base.cc $<TARGET_OBJECTS:baseFunctions> $<TARGET_OBJECTS:baseMonitors> $<TARGET_OBJECTS:baseRNGs> $<TARGET_OBJECTS:baseSamplers>)
target_include_directories(base PRIVATE .)
target_link_libraries(base PRIVATE jags ${BLAS_LIBRARIES})
if(NOT WIN32)
	set_target_properties(base PROPERTIES PREFIX "")
endif()
export(TARGETS base FILE "${CMAKE_BINARY_DIR}/baseConfig.cmake")
install(TARGETS base DESTINATION lib/JAGS/modules-5)